applications/local-cluster/neuvector/ingressRoute/neuvector-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
  namespace: cattle-neuvector-system
spec:
  replacePathRegex:
    regex: /fedmanaged:443\/*(.*)
    replacement: /$1
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nv-ingressroute
  namespace: cattle-neuvector-system
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`nv-local.rajesh-kumar.in`) && (PathPrefix(`/v2/`) || PathPrefix(`/v1/`))
    kind: Rule
    services:
    - name: neuvector-svc-controller-api
      port: 10443
      scheme: https
  - match: Host(`nv-local.rajesh-kumar.in`) && PathPrefix(`/fed`)
    kind: Rule
    services:
      - name: neuvector-svc-controller-fed-master
        passHostHeader: true
        port: 11443
        scheme: https
    middlewares:
      - name: stripprefix
  - match: Host(`nv-local.rajesh-kumar.in`)
    kind: Rule
    services:
    - name: neuvector-service-webui
      port: 8443
      scheme: http
  tls:
    secretName: rancher-tls-cert
